--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
+  <main>
   <div id="contain">
   <header id="a">a</header>
   <div id="b">b</div>
@@ -21,5 +22,6 @@
   </section>
   <footer id="i">i</footer>
   </div>
+</main>
 </body>
 </html>
